MMN14/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-sourcepath
/home/eyalcohen4/University/intro-to-cs/MMN14
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-device.jar:/home/eyalcohen4/University/intro-to-cs/MMN14
-d
/home/eyalcohen4/University/intro-to-cs/MMN14/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
MMN14
-windowtitle
MMN14
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
/home/eyalcohen4/University/intro-to-cs/MMN14/Ex14.java
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester.java
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java
<---- end of javadoc command ---->
Loading source file /home/eyalcohen4/University/intro-to-cs/MMN14/Ex14.java...
Loading source file /home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester.java...
Loading source file /home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java...
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:1: error: class, interface, or enum expected
tatic void checkIsSink() {
^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:9: error: class, interface, or enum expected
        int[][] mat1 = { //sink=1
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:13: error: class, interface, or enum expected
        int[][] mat2 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:17: error: class, interface, or enum expected
        int[][] mat3 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:24: error: class, interface, or enum expected
        int[][] mat4 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:31: error: class, interface, or enum expected
        int[][] mat5 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:38: error: class, interface, or enum expected
        int[][] mat6 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:45: error: class, interface, or enum expected
        int[][] mat7 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:52: error: class, interface, or enum expected
        int[][] mat8 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:59: error: class, interface, or enum expected
        int[][] mat9 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:66: error: class, interface, or enum expected
        int[][] mat10 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:73: error: class, interface, or enum expected
        int[][] mat11 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:80: error: class, interface, or enum expected
        int[][] mat12 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:87: error: class, interface, or enum expected
        int[][] mat13 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:94: error: class, interface, or enum expected
        int[][] mat14 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:101: error: class, interface, or enum expected
        int[][] mat15 = {
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:109: error: class, interface, or enum expected
        if( Ex14.isSink(mat0) != -1 ||
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:115: error: class, interface, or enum expected
        else
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:118: error: class, interface, or enum expected
        System.out.println("");
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:119: error: class, interface, or enum expected
        System.out.println("Mat Results:");
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:120: error: class, interface, or enum expected
        System.out.println("");
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:121: error: class, interface, or enum expected
        System.out.println("Mat 0: " + Ex14.isSink(mat0));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:122: error: class, interface, or enum expected
        System.out.println("Mat 1: " + Ex14.isSink(mat1));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:123: error: class, interface, or enum expected
        System.out.println("Mat 2: " + Ex14.isSink(mat2));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:124: error: class, interface, or enum expected
        System.out.println("Mat 3: " + Ex14.isSink(mat3));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:125: error: class, interface, or enum expected
        System.out.println("Mat 4: " + Ex14.isSink(mat4));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:126: error: class, interface, or enum expected
        System.out.println("Mat 5: " + Ex14.isSink(mat5));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:127: error: class, interface, or enum expected
        System.out.println("Mat 6: " + Ex14.isSink(mat6));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:128: error: class, interface, or enum expected
        System.out.println("Mat 7: " + Ex14.isSink(mat7));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:129: error: class, interface, or enum expected
        System.out.println("Mat 8: " + Ex14.isSink(mat8));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:130: error: class, interface, or enum expected
        System.out.println("Mat 9: " + Ex14.isSink(mat9));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:131: error: class, interface, or enum expected
        System.out.println("Mat 10: " + Ex14.isSink(mat10));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:132: error: class, interface, or enum expected
        System.out.println("Mat 11: " + Ex14.isSink(mat11));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:133: error: class, interface, or enum expected
        System.out.println("Mat 12: " + Ex14.isSink(mat12));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:134: error: class, interface, or enum expected
        System.out.println("Mat 13: " + Ex14.isSink(mat13));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:135: error: class, interface, or enum expected
        System.out.println("Mat 14: " + Ex14.isSink(mat14));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:136: error: class, interface, or enum expected
        System.out.println("Mat 15: " + Ex14.isSink(mat15));
        ^
/home/eyalcohen4/University/intro-to-cs/MMN14/StudentTester2.java:138: error: class, interface, or enum expected
    }
    ^
38 errors
